# BabelWiresAudio

./: CMakeLists.txt  README.md
Alsa/: CMakeLists.txt
Alsa/Source/: CMakeLists.txt  alsaAudioDest.cpp  alsaAudioDest.hpp  alsaAudioInterface.cpp  alsaAudioInterface.hpp  alsaAudioSource.cpp  alsaAudioSource.hpp  alsaCommon.cpp  alsaInit.cpp  alsaInit.hpp
Alsa/Tests/: CMakeLists.txt  alsaTest.cpp
Common/: CMakeLists.txt  audioInit.cpp
